--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,385 @@
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  justify-items: center;
+}
+
+.lookUp {
+  position: sticky;
+  top: 0px;
+  margin-bottom: 20px;
+  margin-top: 4px;
+  height: 80px;
+}
+
+.title {
+  font-family: "Titillium Web", sans-serif;
+  font-size: 34px;
+  color: blueviolet;
+  background-color: #99f7f7;
+  width: 100%;
+  border-radius: 9px;
+  padding: 15px;
+}
+
+.lookUp input[name="input"] {
+  height: 4vh;
+  width: 20vw;
+  transition: all 1s;
+  font-size: 20px;
+  border: none;
+  padding: 9px 15px;
+  margin-right: 15px;
+  border-radius: 5px;
+  box-shadow: 4px 4px 8px gray;
+  color: blueviolet;
+}
+
+.welcome-page {
+  text-align: center;
+  width: 95vw;
+  font-size: 30px;
+  font-family: "Chelsea Market", cursive;
+  grid-column: 2;
+  transform: translateY(200px);
+}
+
+.lookUp input[name="submit"] {
+  height: 5vh;
+  transition: all 1s;
+  font-size: 21px;
+  border: none;
+  background-color: #99f7f7;
+  padding: 28px 20px;
+  line-height: 0px;
+  color: blueviolet;
+  width: 15vw;
+  font-weight: 700;
+  margin-left: 15px;
+  border-radius: 5px;
+  box-shadow: 4px 4px 8px gray;
+}
+
+#detailButton {
+  height: 5vh;
+  transition: all 1s;
+  font-size: 21px;
+  border: none;
+  background-color: #99f7f7;
+  padding: 28px 20px;
+  line-height: 0px;
+  color: blueviolet;
+  width: 15vw;
+  font-weight: 700;
+  margin-left: 15px;
+  border-radius: 5px;
+  box-shadow: 4px 4px 8px gray;
+  margin-top: 29px;
+}
+#detailButton: active {
+  rotate: 360deg;
+}
+#detailButton:hover {
+  border: 1px solid blueviolet;
+  transform: scale(1.05);
+  cursor: pointer;
+  margin-left: 10px;
+}
+
+.lookUp input[name="submit"]:active {
+  rotate: 360deg;
+}
+
+.lookUp input[name="submit"]:hover {
+  border: 1px solid blueviolet;
+  transform: scale(1.05);
+  cursor: pointer;
+  margin-left: 10px;
+}
+
+.lookUp input[name="input"]:hover {
+  border: 1px solid blueviolet;
+  transform: scale(1.05);
+  cursor: text;
+  margin-right: 13px;
+}
+
+.recipes-div {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-gap: 30px 25px;
+  justify-items: center;
+  margin-top: 10px;
+}
+
+.individual-recipe-div {
+  margin-bottom: 30px;
+  background-color: #dbffff;
+  width: 30vw;
+  height: 600px;
+  box-shadow: 7px 7px 12px gray;
+  transition: 0.5s;
+  border: 2px solid transparent;
+}
+
+.individual-recipe-div h3 {
+  height: 50px;
+}
+
+.individual-recipe-div:hover {
+  border: 2px solid violet;
+}
+
+.individual-recipe-div p,
+strong {
+  font-family: "Chelsea Market", cursive;
+}
+
+.individual-recipe-div img {
+  border-radius: 10px;
+  border: olive solid 2px;
+  width: 73%;
+  height: auto;
+}
+
+.recipe-title {
+  font-family: "Chelsea Market", cursive;
+  font-size: 20px;
+}
+
+#recipe-link {
+  font-size: 18px;
+  text-decoration: none;
+  color: black;
+  lighting-color: blanchedalmond;
+  font-family: "Chelsea Market", cursive;
+  margin-top: 60px;
+}
+
+.recipeDetailsHeader {
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-self: center;
+  align-items: center;
+}
+
+.recipeDetailDiv {
+  display: grid;
+  grid-template-columns: 50% 50%;
+  justify-items: center;
+  background-color: #dbffff;
+  box-shadow: 4px 4px 12px gray;
+  width: 90vw;
+  margin: auto;
+}
+
+a {
+  text-decoration: none;
+  color: blueviolet;
+  font-size: 20px;
+  transition: 0.4s;
+}
+
+a:hover {
+  color: crimson;
+}
+
+#timerIcon {
+  font-size: 20px;
+  margin: 0;
+}
+
+small {
+  font-family: "Chelsea Market", cursive;
+  font-size: 22px;
+}
+
+.left-details {
+  padding: 20px;
+}
+
+.left-details img {
+  width: 100%;
+  height: auto;
+  border-radius: 3%;
+  box-shadow: 4px 4px 9px gray;
+}
+
+.left-details ul,
+.right-details ul {
+  padding: 0;
+  list-style: none;
+
+  margin-top: 0;
+  padding: 30px;
+}
+
+.ingredients h2,
+.right-details h2 {
+  font-family: "Nanum Pen Script", cursive;
+  font-size: 39px;
+  line-height: 30px;
+  margin-bottom: 0;
+  text-align: start;
+  margin-left: 27px;
+}
+
+.ingredients {
+  background-color: white;
+  padding: 15px;
+  margin-top: 20px;
+  font-size: 20px;
+  line-height: 34px;
+  box-shadow: 6px 6px 12px gray;
+  border-radius: 6px;
+}
+
+li {
+  font-family: "Montserrat", sans-serif;
+}
+
+.right-details {
+  background-color: white;
+  padding: 15px;
+  margin-top: 20px;
+  font-size: 20px;
+  line-height: 34px;
+  box-shadow: 6px 6px 12px gray;
+  border-radius: 6px;
+  height: 1300px;
+}
+
+.healthLabels {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.healthLabels p {
+  padding: 10px;
+  background-color: green;
   color: white;
+  margin: 8px;
+  border-radius: 5px;
 }
 
-.App-link {
-  color: #61dafb;
+#directions-link {
+  font-size: 20px;
+  font-family: "Chelsea Market", cursive;
+  text-align: center;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+@media only screen and (max-width: 500px) {
+  .recipes-div {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-gap: 30px 4px;
+    justify-items: center;
   }
-  to {
-    transform: rotate(360deg);
+
+  .individual-recipe-div {
+    margin-bottom: 0px;
+    background-color: #dbffff;
+    width: 90vw;
+    height: 80vh;
+  }
+
+  .lookUp input[name="input"] {
+    height: 4vh;
+    width: 34vw;
+    transition: all 1s;
+  }
+
+  .lookUp input[name="submit"] {
+    width: 39vw;
+    height: 3vh;
+    font-size: 20px;
+    padding: 25px;
+  }
+
+  .lookUp input[name="input"]:hover {
+    border: 2px solid blueviolet;
+  }
+
+  .welcome-page {
+    transform: translateY(-5px);
+  }
+
+  #detailButton {
+    width: 70vw;
+  }
+
+  .left-details ul,
+  .right-details ul {
+    padding: 0px;
+    list-style: none;
+    line-height: 30px;
+  }
+
+  .ingredients h2 {
+    margin-bottom: 30px;
+    margin-top: 30px;
+    margin-left: 0;
+  }
+
+  .right-details {
+    width: 72vw;
+    margin: auto;
+    height: 1110px;
+  }
+
+  .right-details h2 {
+    margin: 30px 0px 25px 0px;
+  }
+
+  .recipeDetailDiv {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .title {
+    padding: 0px;
+    font-size: 29px;
+  }
+}
+
+@media only screen and (orientation: landscape) and (max-width: 1000px) {
+  .individual-recipe-div {
+    margin-bottom: 0px;
+    background-color: #dbffff;
+    height: 110vh;
+  }
+
+  .individual-recipe-div img {
+    width: 50%;
+  }
+
+  .individual-recipe-div h3 {
+    height: 90px;
+  }
+
+  .lookUp input[name="input"] {
+    height: 7vh;
+    width: 40vw;
+    transition: all 1s;
+  }
+
+  .lookUp input[name="submit"] {
+    width: 42vw;
+    height: 3vh;
+    font-size: 20px;
+    padding: 24px;
+  }
+
+  .welcome-page {
+    transform: translateY(-50px);
+  }
+
+  #detailButton {
+    width: 27vw;
+    padding: 20px;
+    transform: translateX(-5px);
   }
 }
